completed update page

--- a/src/pages/update.html
+++ b/src/pages/update.html
@@ -104,7 +104,7 @@
     </header>
    
     <main id="updateDeveloper" class="update-developer">
-      <form id="updateDeveloperForm" class="developer update-developer" data-id="${id}"> 
+      <form id="updateDeveloperForm" class="developer  developer-update" data-id="${id}"> 
       
         <header class=" avatar full-stack">   
        
